[gd_scene load_steps=13 format=2]

[ext_resource path="res://textures/ui/icon_chest.png" type="Texture" id=1]
[ext_resource path="res://fonts/ui.tres" type="DynamicFont" id=2]
[ext_resource path="res://textures/ui/icon_steps.png" type="Texture" id=3]
[ext_resource path="res://textures/ui/icon_question.png" type="Texture" id=4]
[ext_resource path="res://objects/PressStart.tscn" type="PackedScene" id=5]
[ext_resource path="res://textures/level_clear.png" type="Texture" id=6]
[ext_resource path="res://shader.shader" type="Shader" id=7]
[ext_resource path="res://textures/slso8.png" type="Texture" id=8]
[ext_resource path="res://scenes/LevelClear.gd" type="Script" id=10]
[ext_resource path="res://textures/ui/level_pipe.png" type="Texture" id=11]
[ext_resource path="res://textures/ui/level_circle.png" type="Texture" id=12]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )

[node name="LevelClear" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelPipe" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -168.0
margin_right = 112.0
margin_bottom = -136.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Indicator" type="TextureRect" parent="LevelPipe"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -16.0
margin_right = -80.0
margin_bottom = 16.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -56.0
margin_right = 52.0
margin_bottom = 56.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepsTaken" type="HBoxContainer" parent="Stats"]
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
custom_constants/separation = 8

[node name="Icon" type="TextureRect" parent="Stats/StepsTaken"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )
expand = true

[node name="Value" type="Label" parent="Stats/StepsTaken"]
margin_left = 40.0
margin_top = 6.0
margin_right = 104.0
margin_bottom = 26.0
rect_min_size = Vector2( 64, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "24"
align = 1

[node name="Treasure" type="HBoxContainer" parent="Stats"]
margin_top = 40.0
margin_right = 104.0
margin_bottom = 72.0
rect_min_size = Vector2( 64, 32 )
custom_constants/separation = 8

[node name="Icon" type="TextureRect" parent="Stats/Treasure"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 1 )
expand = true

[node name="Value" type="Label" parent="Stats/Treasure"]
margin_left = 40.0
margin_top = 6.0
margin_right = 104.0
margin_bottom = 26.0
rect_min_size = Vector2( 64, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "5/16"
align = 1

[node name="Secrets" type="HBoxContainer" parent="Stats"]
margin_top = 80.0
margin_right = 104.0
margin_bottom = 112.0
rect_min_size = Vector2( 64, 32 )
custom_constants/separation = 8

[node name="Icon" type="TextureRect" parent="Stats/Secrets"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 4 )
expand = true

[node name="Value" type="Label" parent="Stats/Secrets"]
margin_left = 40.0
margin_top = 6.0
margin_right = 104.0
margin_bottom = 26.0
rect_min_size = Vector2( 64, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "0/1"
align = 1

[node name="PressStart" parent="." instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = 160.0
margin_right = 34.0
margin_bottom = 192.0

[node name="Shader" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true

[node name="Blackout" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio_Music" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="Tween" type="Tween" parent="."]
